[FNR-06] - Se modifica barra de progreso

--- a/src/app/resume/profile/education/education.component.html
+++ b/src/app/resume/profile/education/education.component.html
@@ -1,4 +1,4 @@
-<div class="section" id="education">
+<div class="section" id="educationTab">
   <div class="container cc-education">
     <div class="h4 text-center mb-4 title">Education</div>
     <div class="card" *ngFor="let education of educations">
