--- a/src/app/resume/profile/experience/experience.component.html
+++ b/src/app/resume/profile/experience/experience.component.html
@@ -1,4 +1,4 @@
-<div class="section" id="experience">
+<div class="section" id="experienceTab">
   <div class="container cc-experience">
     <div class="h4 text-center mb-4 title">Work Experience</div>
     <div class="card" *ngFor="let experience of experiences">
