--- a/src/app/resume/profile/information/information.component.html
+++ b/src/app/resume/profile/information/information.component.html
@@ -35,7 +35,7 @@
     </div>
   </div>
 </div>
-<div class="section" id="about">
+<div class="section" id="InformationTab">
   <div class="container">
     <div class="card" data-aos="fade-up" data-aos-offset="10">
       <div class="row">
