--- a/src/app/resume/profile/header/header.component.html
+++ b/src/app/resume/profile/header/header.component.html
@@ -14,16 +14,16 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#about">Information</a>
+              <a class="nav-link smooth-scroll" href="#InformationTab">Information</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#skill">Skills</a>
+              <a class="nav-link smooth-scroll" href="#skillTab">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#experience">Experience</a>
+              <a class="nav-link smooth-scroll" href="#experienceTab">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#education">Education</a>
+              <a class="nav-link smooth-scroll" href="#educationTab">Education</a>
             </li>
             <!--<li class="nav-item">
               <a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a>
