--- a/src/app/resume/profile/skill/skill.component.html
+++ b/src/app/resume/profile/skill/skill.component.html
@@ -1,4 +1,4 @@
-<div class="section" id="skill">
+<div class="section" id="skillTab">
   <div class="container">
     <div class="h4 text-center mb-4 title">Skills</div>
     <div class="card" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
@@ -6,12 +6,7 @@
         <div class="row">
           <div class="col-md-6" *ngFor="let skill of skills">
             <div class="progress-container progress-primary">
-              <span class="progress-badge">{{skill?.skill_type}}</span>
-              <div class="progress">
-                <div class="progress-bar progress-bar-primary" data-aos="progress-full" data-aos-offset="10" data-aos-duration="2000" role="progressbar"
-                  aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width': skills?.progress }"></div>
-                <span class="progress-value">{{skill?.progress}}</span>
-              </div>
+              <app-skill-progress [title]="skill?.skill_type" [progress]="skill?.progress" [lvl]="skill?.lvl" [max]="skill?.max"></app-skill-progress>
             </div>
           </div>
         </div>
