[FNR-07] - Integracion de analytics

--- a/src/app/resume/profile/contact/contact.component.html
+++ b/src/app/resume/profile/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="section" id="contact">
+<div class="section" id="contactTab">
   <div class="cc-contact-information" style="background-image: url('assets/images/background-contact.jpg');">
     <div class="container">
       <div class="cc-contact">
