--- a/src/app/resume/profile/header/header.component.html
+++ b/src/app/resume/profile/header/header.component.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#InformationTab">Information</a>
+              <a class="nav-link smooth-scroll" href="#informationTab">Information</a>
             </li>
             <li class="nav-item">
               <a class="nav-link smooth-scroll" href="#skillTab">Skills</a>
@@ -26,10 +26,10 @@
               <a class="nav-link smooth-scroll" href="#educationTab">Education</a>
             </li>
             <!--<li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#portfolio">Portfolio</a>
+              <a class="nav-link smooth-scroll" href="#portfolioTab">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link smooth-scroll" href="#contact">Contact</a>
+              <a class="nav-link smooth-scroll" href="#contactTab">Contact</a>
             </li>-->
           </ul>
         </div>
