--- a/src/app/resume/profile/portfolio/portfolio.component.html
+++ b/src/app/resume/profile/portfolio/portfolio.component.html
@@ -1,4 +1,4 @@
-<div class="section" id="portfolio">
+<div class="section" id="portfolioTab">
   <div class="container">
     <div class="row">
       <div class="col-md-6 ml-auto mr-auto">
