--- a/src/app/resume/profile/information/information.component.html
+++ b/src/app/resume/profile/information/information.component.html
@@ -11,7 +11,7 @@
           </div>
           <div class="h2 title">Raul Villca</div>
           <p class="category text-white">Full-Stack Developer, Architect</p>
-          <a class="btn btn-primary" style="width: 200px;" href="https://drive.google.com/open?id=1tY03BYRNhk-Sm-2FrSoaIUBSapZPl9rR" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download My Resume</a>
+          <a class="btn btn-primary" id="downloadResume" style="width: 200px;" href="https://drive.google.com/open?id=1tY03BYRNhk-Sm-2FrSoaIUBSapZPl9rR" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download My Resume</a>
         </div>
       </div>
       <div class="section">
@@ -35,7 +35,7 @@
     </div>
   </div>
 </div>
-<div class="section" id="InformationTab">
+<div class="section" id="informationTab">
   <div class="container">
     <div class="card" data-aos="fade-up" data-aos-offset="10">
       <div class="row">
