[FNR_10] - Actualizacion de estado

--- a/src/app/resume/profile/information/information.component.html
+++ b/src/app/resume/profile/information/information.component.html
@@ -9,8 +9,8 @@
               <img src="assets/images/foto.jpeg" alt="Image" />
             </a>
           </div>
-          <div class="h2 title">Raul Villca</div>
-          <p class="category text-white">Full-Stack Developer, Architect</p>
+          <div class="h2 title">Raúl Villca</div>
+          <p class="category text-white">Software Engineer, Architect Software</p>
           <a class="btn btn-primary" id="downloadResume" style="width: 200px;" href="https://drive.google.com/open?id=1tY03BYRNhk-Sm-2FrSoaIUBSapZPl9rR" target="_blank" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Download My Resume</a>
         </div>
       </div>
